# norbit

./: .buildinfo  .gitignore  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  genindex.html  index.html  objects.inv  package.xml  search.html  searchindex.js
.github/workflows/: pages.yml
doc/: smime.p7s
docs/: conf.py  index.md
include/norbit/: raw_detection_data.cpp  raw_detection_data.h  s7k.cpp  s7k.h
include/norbit/norbit_types/: header.h  message.cpp
nodes/: norbit_gui_node.cpp  norbit_node.cpp
norbit/: CMakeLists.txt  package.xml
norbit/config/: bench_test.yaml  norbit.yaml
norbit/include/norbit/: conversions.h  defs.h  norbit_connection.h
norbit/include/norbit/norbit_types/: bathymetric_data.cpp  bathymetric_data.h  header.cpp  message.h  norbit_definitions.h  water_column_data.h
norbit/launch/: norbit.launch
norbit/nodes/: bathymetric2sonar_ranges.cpp  future.cpp  norbit_msgs2acoustic_msgs.cpp  norbit_node.cpp
norbit/python/: update_bag.py
norbit/src/: bathymetric_data.cpp  conversions.cpp  header.cpp  message.cpp  norbit_connection.cpp  water_column_data.cpp
norbit_msgs/: CMakeLists.txt  package.xml
norbit_msgs/msg/: BahtymetricHeader.msg  Bathymetric.msg  BathymetricHeader.msg  BathymetricPoint.msg  BathymetricStamped.msg  CmdResp.msg  CommonHeader.msg  WaterColumn.msg  WaterColumnHeader.msg  WaterColumnStamped.msg
norbit_msgs/srv/: NorbitCmd.srv  SetDirection.srv  SetFlip.srv  SetGateMode.srv  SetGateTilt.srv  SetMfDecimation.srv  SetMode.srv  SetOpeningAngle.srv  SetPower.srv  SetRange.srv  SetResolution.srv  SetSidescanMode.srv  SetTxBeamNumber.srv  SetTxDirection.srv
norbit_ui/: CMakeLists.txt  package.xml
norbit_ui/include/norbit_ui/: water_column_view.h  water_column_view.ui
norbit_ui/nodes/: water_colum_node.cpp
norbit_ui/src/: water_column_view.cpp
